@@ -167,6 +167,7 @@ bool			hightlightAll;
 int				toolOutHeight=200;
 int				bottomVPaneHite=200;
 int				topVPaneHite=200;
+//GtkWidget*		findReplaceWidget=NULL;
 
 GtkWidget*		mainWindowScrollbox=NULL;
 
